cluster/default/minidlna/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: upnp
spec:
  selector:
    app: minidlna
  ports:
    - protocol: TCP
      port: 8200
      targetPort: 8200
